specifications and redis added and some services updated