@@ -6,7 +6,11 @@ import lombok.SneakyThrows;
 import lombok.experimental.FieldDefaults;
 import org.example.footballplanning.bean.photo.deletePhoto.DeletePhotoResponseBean;
 import org.example.footballplanning.bean.photo.uploadPhoto.UploadPhotoResponseBean;
+import org.example.footballplanning.exception.customExceptions.FileStorageException;
+import org.example.footballplanning.exception.customExceptions.PhotoOperationException;
+import org.example.footballplanning.exception.customExceptions.ValidationException;
 import org.example.footballplanning.helper.PhotoServiceHelper;
+import org.example.footballplanning.helper.UserServiceHelper;
 import org.example.footballplanning.model.child.PhotoEnt;
 import org.example.footballplanning.model.child.UserEnt;
 import org.example.footballplanning.repository.UserRepository;
@@ -18,11 +22,14 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.File;
-import java.io.FileInputStream;
 import java.io.FileOutputStream;
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 
-import static org.example.footballplanning.helper.GeneralHelper.*;
-import static org.example.footballplanning.staticData.GeneralStaticData.*;
+import static org.example.footballplanning.util.GeneralUtil.*;
+import static org.example.footballplanning.staticData.GeneralStaticData.currentUserId;
 import static org.example.footballplanning.staticData.UploadPhotoStaticData.*;
 
 @Service
@@ -31,36 +38,40 @@ import static org.example.footballplanning.staticData.UploadPhotoStaticData.*;
 public class PhotoServiceImpl implements PhotoService {
     UserRepository userRepository;
     PhotoServiceHelper photoServiceHelper;
+    UserServiceHelper userServiceHelper;
 
     @SneakyThrows
     @Override
     public UploadPhotoResponseBean uploadPhoto(MultipartFile file) {
         UploadPhotoResponseBean response = new UploadPhotoResponseBean();
-        UserEnt user = userRepository.findByIdAndState(currentUserId, 1).orElseThrow(() -> new RuntimeException("User not found!"));
+
+        UserEnt user = userServiceHelper.getUserById(currentUserId);
 
         byte[] bytes = file.getInputStream().readAllBytes();
-        String[] fileNameParts = file.getOriginalFilename().split("\\.");
-        String extension = fileNameParts[fileNameParts.length - 1];
+        String originalFileName = file.getOriginalFilename();
 
-        if (!imageExtensions.contains(extension)) {
-            throw new RuntimeException("Unsupported file format!");
+        if (originalFileName.isBlank() || !originalFileName.contains(".")) {
+            throw new ValidationException("Invalid file name!");
         }
 
-        String photoPath = mediaPath + user.getUsername() + "_" + 1 + "." + extension;
+        String extension = originalFileName.substring(originalFileName.lastIndexOf('.') + 1).toLowerCase();
 
+        if (!imageExtensions.contains(extension)) {
+            throw new ValidationException("Unsupported file format!");
+        }
+
+        String photoPath = mediaPath + user.getUsername() + "_" + System.currentTimeMillis() + "." + extension;
 
         if (user.getPhoto() != null) {
             File oldPhoto = new File(user.getPhoto().getPath());
             if (oldPhoto.exists() && !oldPhoto.delete()) {
-                throw new RuntimeException("Failed to delete old photo: " + oldPhoto.getPath());
+                throw new FileStorageException("Failed to delete old photo: " + oldPhoto.getPath());
             }
         }
 
-        PhotoEnt photo = user.getPhoto();
-        if (photo == null) {
-            photo = new PhotoEnt();
-            photo.setUser(user);
-        }
+        PhotoEnt photo = user.getPhoto() != null ? user.getPhoto() : new PhotoEnt();
+
+        photo.setUser(user);
         photo.setPath(photoPath);
         photo.setFormat(extension);
 
@@ -70,6 +81,7 @@ public class PhotoServiceImpl implements PhotoService {
 
         user.setPhoto(photo);
         userRepository.save(user);
+
         return createResponse(response, "Photo uploaded successfully!");
     }
 
@@ -77,17 +89,20 @@ public class PhotoServiceImpl implements PhotoService {
     public DeletePhotoResponseBean deletePhoto() {
         DeletePhotoResponseBean response = new DeletePhotoResponseBean();
 
-        UserEnt user = userRepository.findByIdAndState(currentUserId, 1).orElseThrow(() -> new RuntimeException("User not found!"));
+        UserEnt user = userServiceHelper.getUserById(currentUserId);
+
         PhotoEnt photo = user.getPhoto();
 
         if (photo == null) {
-            throw new RuntimeException("You have not any photo!");
+            throw new PhotoOperationException("You do not have a profile photo to delete!");
         }
 
-        File file = new File(photo.getPath());
+        Path filePath = Paths.get(photo.getPath());
 
-        if (file.exists() && !file.delete()) {
-            throw new RuntimeException("Failed to delete old photo: " + file.getPath());
+        try {
+            Files.deleteIfExists(filePath);
+        } catch (IOException e) {
+            throw new FileStorageException("Failed to delete old photo: " + filePath);
         }
 
         user.setPhoto(null);
@@ -99,19 +114,19 @@ public class PhotoServiceImpl implements PhotoService {
     @SneakyThrows
     @Override
     public ResponseEntity<byte[]> showProfilePhoto() {
-        UserEnt user = userRepository.findByIdAndState(currentUserId, 1).orElseThrow(() -> new RuntimeException("User not found!"));
+        UserEnt user = userServiceHelper.getUserById(currentUserId);
         PhotoEnt photo = user.getPhoto();
+
         if (photo == null) {
-            throw new RuntimeException("You have not any profile photo");
+            throw new PhotoOperationException("You have not any profile photo!");
         }
-        String photoPath = photo.getPath();
-        File file = new File(photoPath);
-        byte[] byteFile;
-        try (FileInputStream fileOutputStream = new FileInputStream(file)) {
-            byteFile = fileOutputStream.readAllBytes();
-        }
+
+        Path photoPath = Paths.get(photo.getPath());
+        byte[] byteFile = Files.readAllBytes(photoPath);
+
         HttpHeaders headers = new HttpHeaders();
         headers.setContentType(photoServiceHelper.getMediaType(photo.getFormat()));
+
         return new ResponseEntity<>(byteFile, headers, HttpStatus.OK);
     }
 }
